--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     {% load static %}
-    <title>Login V1</title>
+    <title>Shortymate | Ludis</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -47,21 +47,39 @@
             <img src="{% static 'images/short.svg' %}" alt="IMG" />
           </div>
 
-          <form class="login100-form validate-form">
-            <span class="login100-form-title"> Shortify Url </span>
+          <form class="login100-form" method="POST">
+            {% csrf_token %}
+            <span class="login100-form-title"> Shortymate Url </span>
+            {% if new %}
+            <div class="new">
+              <i onclick="copyToClipboard('{{new}}')" class="fa fa-copy"></i>
+              <p>{{new}}</p>
+              <a
+                href="http://{{new}}"
+                target="_blank"
+                class="fa fa-external-link"
+              ></a>
+            </div>
+            {% endif %}
 
-            <div
-              class="wrap-input100 validate-input"
-              data-validate="Valid email is required: ex@abc.xyz"
-            >
+            <div class="wrap-input100">
               <input
                 class="input100"
                 type="url"
-                name="email"
+                name="url"
+                {%
+                if
+                old
+                %}
+                value="{{old}}"
+                {%
+                endif
+                %}
+                autocomplete="off"
                 placeholder="paste url here"
                 required
               />
-              <span class="focus-input100"></span>
+              <span class="focus-input100">abebe</span>
               <span class="symbol-input100">
                 <i class="fa fa-link" aria-hidden="true"></i>
               </span>
@@ -76,20 +94,31 @@
     </div>
 
     <!--===============================================================================================-->
-    <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+    <script src="{% static 'vendor/jquery/jquery-3.2.1.min.js'%}"></script>
     <!--===============================================================================================-->
-    <script src="vendor/bootstrap/js/popper.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="{% static 'vendor/bootstrap/js/popper.js'%}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js'%}"></script>
     <!--===============================================================================================-->
-    <script src="vendor/select2/select2.min.js"></script>
+    <script src="{% static 'vendor/select2/select2.min.js'%}"></script>
     <!--===============================================================================================-->
-    <script src="vendor/tilt/tilt.jquery.min.js"></script>
+    <script src="{% static 'vendor/tilt/tilt.jquery.min.js'%}"></script>
     <script>
+      function copyToClipboard(text) {
+        var textarea = document.createElement("textarea");
+        textarea.value = text;
+        textarea.style.position = "fixed";
+        textarea.style.left = "-9999px";
+        document.body.appendChild(textarea);
+        textarea.select();
+        document.execCommand("copy");
+        document.body.removeChild(textarea);
+        alert("Url copied to clipboard!");
+      }
       $(".js-tilt").tilt({
         scale: 1.1,
       });
     </script>
     <!--===============================================================================================-->
-    <script src="js/main.js"></script>
+    <script src="{% static 'js/main.js'%}"></script>
   </body>
 </html>
